z-index fix

--- a/public/stylesheets/mak.css
+++ b/public/stylesheets/mak.css
@@ -113,6 +113,7 @@ body {
 }
 
 .box h1 {
+  z-index:3;
   width:252px;
   height:40px;
   line-height:40px;
